# property-tree-example

./: CMakeLists.txt  CMakePresets.json  ReadMe.md  vcpkg.json
cmake/: FindTcbSpan.cmake
libs/: CMakeLists.txt  custom.cpp  generic.cpp  settings.cpp
libs/include/settings/: custom.h  generic.h  settings.h
tests/: CMakeLists.txt  test-custom-ini.cpp  test-custom-json.cpp  test-generic-ini.cpp  test-generic-json.cpp  test-settings.cpp  test-settings.h.in  test-settings.ini.in  test-settings.json.in
tools/: CMakeLists.txt  main.cpp
